--- a/stats.ipynb
+++ b/stats.ipynb
@@ -12353,18 +12353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sp/yx6wrtrx771d6w29mk6zlw_r0000gp/T/ipykernel_87851/3083016871.py:1: FutureWarning:\n",
+      "/var/folders/sp/yx6wrtrx771d6w29mk6zlw_r0000gp/T/ipykernel_87851/275875041.py:1: FutureWarning:\n",
       "\n",
       "'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
       "\n",
-      "/var/folders/sp/yx6wrtrx771d6w29mk6zlw_r0000gp/T/ipykernel_87851/3083016871.py:2: FutureWarning:\n",
+      "/var/folders/sp/yx6wrtrx771d6w29mk6zlw_r0000gp/T/ipykernel_87851/275875041.py:2: FutureWarning:\n",
       "\n",
       "'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
       "\n"
@@ -13413,6 +13413,9 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "title": {
+         "text": "Monthly Disputes Creation"
         },
         "xaxis": {
          "showgrid": false
