--- a/notebooks/stats.ipynb
+++ b/notebooks/stats.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from utils.subgraph import KlerosBoardSubgraph\n",
+    "from ..utils.subgraph import KlerosBoardSubgraph\n",
     "from plotly import graph_objects as go\n"
    ]
   },
