[fix] total supply serie from mints and destroy

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from app.utils.utils import getTotalSupplyTimeSerie\n",
+    "\n",
+    "total_supply: pd.DataFrame = getTotalSupplyTimeSerie(freq='M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,24 +81,19 @@
     "from datetime import datetime\n",
     "from app.utils.utils import getTimeSeriePNKStakedFromStakes\n",
     "\n",
-    "\n",
     "pnk_staked_eth = getTimeSeriePNKStakedFromStakes(df_stakes_eth)\n",
     "pnk_staked_gno = getTimeSeriePNKStakedFromStakes(df_stakes_gno)\n",
     "\n",
-    "\n",
-    "\n",
-    "total_supply = 776626704\n",
-    "pnk_staked_eth['total_supply'] = 776626704\n",
-    "pnk_staked_eth.loc[pnk_staked_eth.index < datetime(year=2024,month=1,day=20), 'total_supply'] -= 12000000  # mint kip66\n",
-    "pnk_staked_eth.loc[pnk_staked_eth.index < datetime(year=2019,month=12,day=30), 'total_supply'] -= 200000000  # mint second token sale\n",
+    "pnk_staked_eth['total_supply'] = total_supply.reindex(pnk_staked_eth.index).fillna(method='ffill')\n",
+    "pnk_staked_gno['total_supply'] = total_supply.reindex(pnk_staked_gno.index).fillna(method='ffill')\n",
     "\n",
     "pnk_staked_eth['percentage'] = pnk_staked_eth['total_staked'] / pnk_staked_eth['total_supply']\n",
-    "pnk_staked_gno['percentage'] = pnk_staked_gno['total_staked'] / pnk_staked_eth['total_supply']\n"
+    "pnk_staked_gno['percentage'] = pnk_staked_gno['total_staked'] / pnk_staked_gno['total_supply']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -167,130 +173,130 @@
           "2024-02-29T00:00:00"
          ],
          "y": [
-          2.214797357328613,
-          3.507065406556763,
-          3.8850470234575822,
-          4.625279254332651,
-          3.3746539195825638,
-          3.361397537865834,
-          3.243882773061723,
-          3.167102197911187,
-          3.444508394728052,
-          1.9338713219202157,
-          3.0640511508764097,
-          5.697433408215139,
-          4.470978965418321,
-          3.1784607046685016,
-          2.833691635648137,
-          3.45829327424507,
-          8.456987200430941,
-          7.242031838393776,
-          4.768265474707559,
-          4.572883130080201,
-          4.8126559364884285,
-          14.867864171881118,
-          14.833240941639703,
-          11.593779540165677,
-          18.244657890414572,
-          19.75630777116279,
-          19.15266822911432,
-          21.143692865807232,
-          20.539399185089486,
-          20.225930201144937,
-          20.068236780862012,
-          19.209084004295658,
-          19.481400928683406,
-          19.05332063863906,
-          18.06056888346072,
-          17.719950394498323,
-          19.816203533312603,
-          19.633490667541505,
-          19.910510648829714,
-          18.245981039877492,
-          15.433503885780246,
-          16.055870690103443,
-          19.842436070464025,
-          20.412037829181724,
-          15.994805305914886,
-          16.974973766771534,
-          20.990136688849887,
-          20.308788640678248,
-          21.529607644438123,
-          22.05261690106782,
-          20.741703506170104,
-          20.17183370067997,
-          20.106029765287516,
-          22.641544299265092,
-          22.55845744335672,
-          23.61441138668735,
-          24.745163415845703,
-          24.541446360808152,
-          25.668426022870673,
-          26.117204802175166
+          3.7937876898965226,
+          6.00734939611132,
+          6.654804568685265,
+          7.922768843550437,
+          5.780538095465057,
+          5.757830872340066,
+          5.556536579379263,
+          5.42501700723176,
+          5.900193759227804,
+          4.485952251125799,
+          4.884747477242292,
+          8.22543443387822,
+          6.454791429816463,
+          4.588771514066621,
+          4.091025394214269,
+          3.6241866878701527,
+          8.862666639508985,
+          7.5894301901182795,
+          4.99699790829289,
+          4.792243124273625,
+          5.043517768783831,
+          15.581071683562103,
+          15.54478758612407,
+          12.149930078079375,
+          19.119849303590303,
+          20.70401262927705,
+          20.071416658062997,
+          22.157950219939455,
+          21.52466873119718,
+          21.19616272300734,
+          21.03090479106435,
+          20.130538683057456,
+          20.415918578278532,
+          19.967303389950704,
+          18.926929595665584,
+          18.569971727883406,
+          20.766781575294388,
+          20.575304021680957,
+          20.86561257819802,
+          19.121235924182976,
+          16.17384498492169,
+          16.826066560228313,
+          20.794272480314287,
+          21.39119788473441,
+          16.76207188571241,
+          17.789258768375593,
+          21.997027993790045,
+          21.28299585996848,
+          22.562377228424367,
+          23.110475100755338,
+          21.73667753704926,
+          21.13947122772393,
+          21.070510694956265,
+          23.727653190469105,
+          23.640580680059806,
+          24.74718845474551,
+          25.932182359651517,
+          25.71869305136827,
+          27.321896237791588,
+          27.34976852074932
          ]
         },
         {
          "base": [
-          2.214797357328613,
-          3.507065406556763,
-          3.8850470234575822,
-          4.625279254332651,
-          3.3746539195825638,
-          3.361397537865834,
-          3.243882773061723,
-          3.167102197911187,
-          3.444508394728052,
-          1.9338713219202157,
-          3.0640511508764097,
-          5.697433408215139,
-          4.470978965418321,
-          3.1784607046685016,
-          2.833691635648137,
-          3.45829327424507,
-          8.456987200430941,
-          7.242031838393776,
-          4.768265474707559,
-          4.572883130080201,
-          4.8126559364884285,
-          14.867864171881118,
-          14.833240941639703,
-          11.593779540165677,
-          18.244657890414572,
-          19.75630777116279,
-          19.15266822911432,
-          21.143692865807232,
-          20.539399185089486,
-          20.225930201144937,
-          20.068236780862012,
-          19.209084004295658,
-          19.481400928683406,
-          19.05332063863906,
-          18.06056888346072,
-          17.719950394498323,
-          19.816203533312603,
-          19.633490667541505,
-          19.910510648829714,
-          18.245981039877492,
-          15.433503885780246,
-          16.055870690103443,
-          19.842436070464025,
-          20.412037829181724,
-          15.994805305914886,
-          16.974973766771534,
-          20.990136688849887,
-          20.308788640678248,
-          21.529607644438123,
-          22.05261690106782,
-          20.741703506170104,
-          20.17183370067997,
-          20.106029765287516,
-          22.641544299265092,
-          22.55845744335672,
-          23.61441138668735,
-          24.745163415845703,
-          24.541446360808152,
-          25.668426022870673,
-          26.117204802175166
+          3.7937876898965226,
+          6.00734939611132,
+          6.654804568685265,
+          7.922768843550437,
+          5.780538095465057,
+          5.757830872340066,
+          5.556536579379263,
+          5.42501700723176,
+          5.900193759227804,
+          4.485952251125799,
+          4.884747477242292,
+          8.22543443387822,
+          6.454791429816463,
+          4.588771514066621,
+          4.091025394214269,
+          3.6241866878701527,
+          8.862666639508985,
+          7.5894301901182795,
+          4.99699790829289,
+          4.792243124273625,
+          5.043517768783831,
+          15.581071683562103,
+          15.54478758612407,
+          12.149930078079375,
+          19.119849303590303,
+          20.70401262927705,
+          20.071416658062997,
+          22.157950219939455,
+          21.52466873119718,
+          21.19616272300734,
+          21.03090479106435,
+          20.130538683057456,
+          20.415918578278532,
+          19.967303389950704,
+          18.926929595665584,
+          18.569971727883406,
+          20.766781575294388,
+          20.575304021680957,
+          20.86561257819802,
+          19.121235924182976,
+          16.17384498492169,
+          16.826066560228313,
+          20.794272480314287,
+          21.39119788473441,
+          16.76207188571241,
+          17.789258768375593,
+          21.997027993790045,
+          21.28299585996848,
+          22.562377228424367,
+          23.110475100755338,
+          21.73667753704926,
+          21.13947122772393,
+          21.070510694956265,
+          23.727653190469105,
+          23.640580680059806,
+          24.74718845474551,
+          25.932182359651517,
+          25.71869305136827,
+          27.321896237791588,
+          27.34976852074932
          ],
          "marker": {
           "color": "#009BFF"
@@ -389,38 +395,38 @@
           null,
           null,
           null,
-          0.28639868368531607,
-          0.8321474478683967,
-          1.4253841776213554,
-          1.2682660920433286,
-          1.2601923677889757,
-          1.337617496852338,
-          1.4458868191830536,
-          1.524728453488874,
-          1.5672421854546732,
-          1.6005630520736929,
-          1.0732853886569251,
-          1.3674148288033006,
-          1.25102330413492,
-          1.7405000818520007,
-          1.8721859245352719,
-          1.9304937465382823,
-          1.834202707480849,
-          1.8460482676816152,
-          1.5032568334203844,
-          1.8849815831559134,
-          1.3833600005465458,
-          1.489449998190541,
-          1.9557816777084964,
-          1.8145344495116817,
-          1.6912350040138007,
-          1.903240358700724,
-          2.0293800330644647,
-          2.0663442120777327,
-          2.9628565544536825,
-          4.3036587352098685,
-          3.061606082529489,
-          4.20223105083135
+          0.30013715278743663,
+          0.8720653408343783,
+          1.4937594795987175,
+          1.3291044810142407,
+          1.3206434623429577,
+          1.4017826543680527,
+          1.515245627453052,
+          1.5978692741024116,
+          1.6424223785454588,
+          1.6773416383226127,
+          1.1247706048600212,
+          1.4330093564511202,
+          1.3110345611306922,
+          1.8239914104051558,
+          1.9619941881302054,
+          2.0230990209319124,
+          1.922188926200483,
+          1.9346027147908544,
+          1.575367666098616,
+          1.975403651110346,
+          1.4497194138652902,
+          1.560898520634792,
+          2.0496000074715437,
+          1.9015771870989135,
+          1.7659003772148112,
+          1.9880755726893091,
+          2.1202661338675357,
+          2.15927758754506,
+          2.8329566754134534,
+          4.510713322033688,
+          3.3694915527944125,
+          4.4016279792071895
          ]
         }
        ],
@@ -1250,7 +1256,7 @@
         "yaxis": {
          "range": [
           0,
-          30
+          50
          ],
          "showgrid": false
         }
@@ -1286,7 +1292,7 @@
     ")\n",
     "fig.update_layout(\n",
     "    xaxis=dict(showgrid=False),\n",
-    "    yaxis=dict(showgrid=False, range=[0, 30]),\n",
+    "    yaxis=dict(showgrid=False, range=[0, 50]),\n",
     "    title=dict(text=\"% PNK staked over Total Supply\")\n",
     ")\n",
     "fig.show()"
