[chore] add timestamp of the snapshot for jurors

--- a/neo-early-users.ipynb
+++ b/neo-early-users.ipynb
@@ -10,12 +10,12 @@
     "1. Has staked at least 1 PNK in Mainnet or Gnosis.\n",
     "2. Currently Registered in PoH (those who has registered but with a non-active profile   are out).\n",
     "\n",
-    "The snapshot to filter these wallets is at Thursday, March 3, 2024 16:36 UTC (timestamp: 1709483770)"
+    "The snapshot to filter these wallets is at Thursday, March 3, 2024 4:36:10 UTC (timestamp: 1709440570)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snapshot_timestamp = 1709440570"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,21 +73,21 @@
     "# generate a set with all the addresses in the events.\n",
     "# Must to be a set to remove duplicates.\n",
     "jurors_set = set(\n",
-    "    [stake['address'] for stake in allStakes_eth]\n",
-    "    + [stake['address'] for stake in allStakes_gno]\n",
+    "    [stake['address'] for stake in allStakes_eth if stake['timestamp'] <= snapshot_timestamp]\n",
+    "    + [stake['address'] for stake in allStakes_gno if stake['timestamp'] <= snapshot_timestamp]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 2191 jurors in the set\n"
+      "There are 2190 jurors in the set\n"
      ]
     }
    ],
@@ -99,18 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "poh = PoHSubgrpah()\n",
+    "submissionTime = 1646282170  # snapshot timestamp - 2 years\n",
     "submissions = poh.getAllSubmissions(1646282170)\n",
     "profiles_set = set([submission['id'] for submission in submissions])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 3633 profiles in the set\n"
+      "There are 3632 profiles in the set\n"
      ]
     }
    ],
