--- a/neo-early-users.ipynb
+++ b/neo-early-users.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,19 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "poh = PoHSubgrpah()\n",
     "submissionTime = 1646282170  # snapshot timestamp - 2 years\n",
-    "submissions = poh.getAllSubmissions(1646282170)\n",
+    "submissions = poh.getAllSubmissions(submissionTime)\n",
     "profiles_set = set([submission['id'] for submission in submissions])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -135,9 +135,7 @@
     "print(f'There are {len(profiles_set)} profiles in the set')\n",
     "\n",
     "# export list to csv\n",
-    "with open('lists/poh-profiles.csv', 'w', newline='\\n') as file:\n",
-    "     wr = csv.writer(file, quoting=csv.QUOTE_NONE)\n",
-    "     wr.writerow(sorted(jurors_set))"
+    "set_to_csv(profiles_set, 'poh-profiles.csv')"
    ]
   },
   {
@@ -150,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -174,9 +172,7 @@
     "print(f'There are {len(v2neo_set)} profiles in the set')\n",
     "\n",
     "# export list to csv\n",
-    "with open('lists/v2-neo-early-users.csv', 'w', newline='\\n') as file:\n",
-    "     wr = csv.writer(file, quoting=csv.QUOTE_NONE)\n",
-    "     wr.writerow(sorted(v2neo_set))"
+    "set_to_csv(v2neo_set, 'v2-neo-early-users.csv')"
    ]
   }
  ],
