[fix] Add missing gnosis jurors.
Also Include testnet users from the csv generated from the Testnet subgraphs (not in this notebook) in the final list and sort it

--- a/neo-early-users.ipynb
+++ b/neo-early-users.ipynb
@@ -9,13 +9,14 @@
     "To be in the whitelist you should meet any of this 2 requirements:\n",
     "1. Has staked at least 1 PNK in Mainnet or Gnosis.\n",
     "2. Currently Registered in PoH (those who has registered but with a non-active profile   are out).\n",
+    "3. Have participated in the Testnet tests of Court v2\n",
     "\n",
     "The snapshot to filter these wallets is at Thursday, March 3, 2024 4:36:10 UTC (timestamp: 1709440570)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
     "\n",
     "def set_to_csv(data: Set, filename: str):\n",
     "    with open('lists/' + filename, 'w', newline='\\n') as file:\n",
-    "        wr = csv.writer(file, quoting=csv.QUOTE_NONE)\n",
+    "        wr = csv.writer(file, quoting=csv.QUOTE_NONE, lineterminator=',\\n')\n",
     "        for item in sorted(data):\n",
     "            wr.writerow([item])"
    ]
@@ -59,41 +60,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kb_eth = KlerosBoardSubgraph('mainnet')\n",
-    "kb_gno = KlerosBoardSubgraph('mainnet')\n",
-    "\n",
-    "# Get the list of all the StakeSet events for both chains\n",
-    "allStakes_eth = kb_eth.getAllStakeSets()\n",
-    "allStakes_gno = kb_eth.getAllStakeSets()\n",
-    "\n",
-    "# generate a set with all the addresses in the events.\n",
-    "# Must to be a set to remove duplicates.\n",
-    "jurors_set = set(\n",
-    "    [stake['address'] for stake in allStakes_eth if stake['timestamp'] <= snapshot_timestamp]\n",
-    "    + [stake['address'] for stake in allStakes_gno if stake['timestamp'] <= snapshot_timestamp]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 2190 jurors in the set\n"
+      "There are 2190 jurors in mainnet the set and 221 in the gnosis set.\n"
      ]
     }
    ],
    "source": [
-    "print(f'There are {len(jurors_set)} jurors in the set')\n",
+    "kb_eth = KlerosBoardSubgraph('mainnet')\n",
+    "kb_gno = KlerosBoardSubgraph('gnosis')\n",
     "\n",
+    "# Get the list of all the StakeSet events for both chains\n",
+    "allStakes_eth = kb_eth.getAllStakeSets()\n",
+    "allStakes_gno = kb_gno.getAllStakeSets()\n",
+    "\n",
+    "# generate a set with all the addresses in the events.\n",
+    "# Must to be a set to remove duplicates.\n",
+    "jurors_eth_set = set(\n",
+    "    [stake['address'] for stake in allStakes_eth if stake['timestamp'] <= snapshot_timestamp]\n",
+    ")\n",
+    "jurors_gno_set = set(\n",
+    "    [stake['address'] for stake in allStakes_gno if stake['timestamp'] <= snapshot_timestamp]\n",
+    ")\n",
+    "print(f'There are {len(jurors_eth_set)} jurors in mainnet the set and {len(jurors_gno_set)} in the gnosis set.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 2306 jurors in the set considering Ethereum and Gnosis\n"
+     ]
+    }
+   ],
+   "source": [
+    "jurors_set = jurors_eth_set.union(jurors_gno_set)\n",
+    "print(f'There are {len(jurors_set)} jurors in the set considering Ethereum and Gnosis')\n",
     "# export list to csv\n",
     "set_to_csv(jurors_set, 'v1-jurors.csv')"
    ]
@@ -108,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -142,29 +154,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NEO list\n",
-    "Then we merge both sets in order to get the full list of participants in the Kleros v2NEO Court"
+    "# V2 List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v2neo_set = jurors_set.union(profiles_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 3632 profiles in the set\n"
+      "There are 161 jurors in the v2 testnet set\n"
+     ]
+    }
+   ],
+   "source": [
+    "v2_jurors_set = set()\n",
+    "with open('lists/v2-neo-early-users-from-v2-testnets.csv', newline='') as csvfile:\n",
+    "    juror_reader = csv.reader(csvfile)\n",
+    "    for v2_juror in list(juror_reader):\n",
+    "        v2_jurors_set.add(v2_juror[0])  # Due to the trailing comma, we need to keep just the first element\n",
+    "\n",
+    "print(f'There are {len(v2_jurors_set)} jurors in the v2 testnet set')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NEO list\n",
+    "Then we merge the three sets in order to get the full list of participants in the Kleros v2NEO Court"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v2neo_set = jurors_set.union(profiles_set).union(v2_jurors_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 3859 profiles in the set\n"
      ]
     }
    ],
@@ -172,7 +214,7 @@
     "print(f'There are {len(v2neo_set)} profiles in the set')\n",
     "\n",
     "# export list to csv\n",
-    "set_to_csv(v2neo_set, 'v2-neo-early-users.csv')"
+    "set_to_csv(v2neo_set, 'v2-neo-early-users-final.csv')"
    ]
   }
  ],
