--- a/neo-early-users.ipynb
+++ b/neo-early-users.ipynb
@@ -16,27 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "\n",
-    "from app.utils.subgraph import KlerosBoardSubgraph, PoHSubgrpah"
+    "from app.utils.subgraph import KlerosBoardSubgraph, PoHSubgraph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "snapshot_timestamp = 1709440570"
+    "snapshot_timestamp = 1731425770"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 2190 jurors in mainnet the set and 221 in the gnosis set.\n"
+      "There are 2222 jurors in mainnet the set and 245 in the gnosis set.\n"
      ]
     }
    ],
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 2306 jurors in the set considering Ethereum and Gnosis\n"
+      "There are 2355 jurors in the set considering Ethereum and Gnosis\n"
      ]
     }
    ],
@@ -120,29 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poh = PoHSubgrpah()\n",
-    "submissionTime = 1646282170  # snapshot timestamp - 2 years\n",
+    "poh = PoHSubgraph()\n",
+    "submissionTime = snapshot_timestamp - (5 * 365 * 24 * 60 * 60)  # 5 years before to capture all the profiles. We are filtering for registered=true\n",
     "submissions = poh.getAllSubmissions(submissionTime)\n",
     "profiles_set = set([submission['id'] for submission in submissions])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 1452 profiles in the set\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'There are {len(profiles_set)} profiles in the set')\n",
     "\n",
@@ -159,17 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 161 jurors in the v2 testnet set\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v2_jurors_set = set()\n",
     "with open('lists/v2-neo-early-users-from-v2-testnets.csv', newline='') as csvfile:\n",
@@ -190,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,28 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 3859 profiles in the set\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'There are {len(v2neo_set)} profiles in the set')\n",
     "\n",
     "# export list to csv\n",
-    "set_to_csv(v2neo_set, 'v2-neo-early-users-final.csv')"
+    "set_to_csv(v2neo_set, 'v2-beta-early-users-12-november-2024.csv')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
